feat: 룰렛 이미지 변경 및 메뉴바 룰렛 추가

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -7,11 +7,7 @@
         </div>
         <div>
             <a href="/roulette">
-                <img
-                    src="/static/images/roulette.png"
-                    alt=""
-                    style="height: auto; width: 50px; position: absolute; left: 660px; top: 30px"
-                />
+                <img src="" alt="" style="height: auto; width: 50px" />
             </a>
         </div>
         <div class="searchResponse" style="z-index: 999; margin-right: -3rem">
@@ -64,6 +60,15 @@
                         </li>
                         <li id="menu6">
                             <a href="/search/category?category=기타">기타</a>
+                        </li>
+                        <li id="roulette">
+                            <a href="/roulette"
+                                ><img
+                                    src="/static/images/roulette0.png"
+                                    alt=""
+                                    style="width: 45px; height: auto"
+                                />
+                            </a>
                         </li>
                     </ul>
                 </nav>
