--- a/static/css/sugPost.css
+++ b/static/css/sugPost.css
@@ -53,7 +53,14 @@
     border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     font-weight: 600;
+    background-color: #ffc064;
 }
 .btn-sug:hover {
-    background-color: #dbdbdbec;
+    background-color: #e1a000;
+}
+.btn-like {
+    background-color: #ffde59;
+}
+.btn-like:hover {
+    background-color: #d2b48c;
 }
