--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="wrapper">
         <div class="headerLogo">
-            <a href="/">
+            <a href="/?category=모든식당">
                 <img src="/static/images/CMM.png" alt="" style="width: auto; height: 200px" />
             </a>
         </div>
@@ -38,6 +38,33 @@
                     </div>
                 </div>
             </div>
+            <script>
+                // 검색 버튼에 이벤트 리스너 추가
+                document.getElementById("searchButton").addEventListener("click", searchKeyword);
+
+                // 키워드로 검색하여 테이블을 채우는 함수
+                async function searchKeyword() {
+                    try {
+                        const keyword = document.getElementById("searchInput").value.trim(); // 입력값의 앞뒤 공백 제거
+                        if (!keyword) {
+                            return; // 검색어가 없으면 함수 종료
+                        }
+                        document.location.href = `/search?keyword=${keyword}`;
+                    } catch (error) {
+                        console.error("데이터 가져오기 오류:", error);
+                    }
+                }
+
+                // 엔터 키 입력 시 검색 실행
+                document
+                    .getElementById("searchInput")
+                    .addEventListener("keypress", function (event) {
+                        if (event.key === "Enter") {
+                            searchKeyword();
+                        }
+                    });
+            </script>
+
             <br />
             <div>
                 <nav class="menu" style="flex: 0 0 auto; margin-top: -15px">
