--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
             <% if (category) { %>
                 <h1><%=category%></h1>
             <% } else { %>
-                <h1>모든식당</h1>
+                <h1>검색결과</h1>
             <% } %>
            
            
@@ -107,30 +107,7 @@
         
         <!-- footer include -->
         <%- include('./include/footer') %>
-        <script>
-            // 검색 버튼에 이벤트 리스너 추가
-            document.getElementById("searchButton").addEventListener("click", searchKeyword);
-
-            // 키워드로 검색하여 테이블을 채우는 함수
-            async function searchKeyword() {
-                try {
-                    const keyword = document.getElementById("searchInput").value.trim(); // 입력값의 앞뒤 공백 제거
-                    if (!keyword) {
-                        return; // 검색어가 없으면 함수 종료
-                    }
-                    document.location.href = `/search?keyword=${keyword}`;
-                } catch (error) {
-                    console.error("데이터 가져오기 오류:", error);
-                }
-            }
-
-            // 엔터 키 입력 시 검색 실행
-            document.getElementById("searchInput").addEventListener("keypress", function (event) {
-                if (event.key === "Enter") {
-                    searchKeyword();
-                }
-            });
-        </script>
+        
 
         <!-- 무한 스크롤 작업 -->
 
