--- a/static/css/adminEditRest.css
+++ b/static/css/adminEditRest.css
@@ -6,9 +6,6 @@ body {
     margin: 0px;
     padding: 0px;
 }
-header {
-    height: 80px;
-}
 .admin-main {
     position: relative;
     width: 85%;
@@ -17,20 +14,25 @@ header {
 h2 {
     margin: 20px 0px;
 }
+.edit-form-div {
+    width: 70%;
+    margin: auto;
+}
 #info-div,
 #category-div,
 #menu-div {
-    width: 60%;
+    width: 100%;
     border-radius: 25px;
     padding: 20px;
     margin: 5px;
     border: 3px solid #edededb2;
     margin-bottom: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 .title-div {
     width: 100%;
     margin: 5px;
+    padding: 10px 10px;
     display: flex;
     justify-content: space-between;
 }
@@ -67,9 +69,10 @@ h2 {
 label {
     width: 100px;
     vertical-align: top;
+    font-weight: 600;
 }
 .edit-restinfo input {
-    width: 600px;
+    width: 70%;
     height: 36px;
     margin-bottom: 5px;
 }
@@ -85,7 +88,7 @@ label {
 }
 .edit-restinfo-form input,
 .edit textarea {
-    width: 600px;
+    width: 70%;
 }
 .edit-category select {
     width: 200px;
