--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -19,5 +19,8 @@
         <li class="sidebar-first">
             <b><a href="/admin/users">회원 관리</a></b>
         </li>
+        <li class="sidebar-first">
+            <b><a href="/">홈으로</a></b>
+        </li>
     </ul>
 </nav>
