feat/ 로그아웃 하면 검색결과 나오는 오류 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
             <% if (category) { %>
                 <h1><%=category%></h1>
             <% } else { %>
-                <h1>검색결과</h1>
+                <h1>모든식당</h1>
             <% } %>
            
            
