--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -64,6 +64,7 @@
                             searchKeyword();
                         }
                     });
+            </script>
             <!-- 타이핑 효과 -->
             <script>
                 const $typingTxt = document.querySelector(".typing .typingTxt");
