--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -75,7 +75,7 @@
                 const $typingTxt = document.querySelector(".typing .typingTxt");
 
                 // 글자 모음 - 개행문자(\n)로 줄바꿈
-                const letters = ["창동 맛집 모음"];
+                const letters = ["창동역 맛집 모음"];
 
                 // 글자 입력 속도
                 const speed = 100;
