--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>창동 맛집 모음</title>
+        <title>창동역 맛집 모음</title>
         <link rel="stylesheet" href="/static/css/index.css" />
         <script src="https://kit.fontawesome.com/9ff27f4d50.js" crossorigin="anonymous"></script>
         <!-- head include -->
