--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                 text-align: center;
             "
         >
-            <img src="/static/images/CMM-circle.png" alt="" style="width: 70px; height: auto; margin-top: -0.5rem; " />
+            <img src="/static/images/CMM-circle.png" alt="CMM-LOGO" style="width: 70px; height: auto; margin-top: -0.5rem; " />
             
             <% if (category) { %>
                 <h1><%=category%></h1>
@@ -88,21 +88,7 @@
         </div>
 
         <br /><br />
-        <!-- <div>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
-        </div> -->
+
     </div>
         
         <!-- footer include -->
