--- a/static/css/header.css
+++ b/static/css/header.css
@@ -598,3 +598,14 @@ label {
     left: 0px;
     top: 10px;
 }
+
+/* 룰렛 효과 */
+#rouletteImg {
+    transition: transform 0.3s ease;
+    width: 45px;
+    height: auto;
+}
+
+#rouletteImg:hover {
+    transform: scale(1.3);
+}
