--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -156,6 +156,7 @@
                             <a href="/roulette"
                                 ><img
                                     src="/static/images/roulette0.png"
+                                    id="rouletteImg"
                                     alt=""
                                     style="width: 45px; height: auto"
                                 />
