--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -24,6 +24,7 @@
         background-color: #dfdfdfce;
     }
     .sidebar a {
+        display: inline-block;
         width: 100%;
         font-size: 24px;
         text-decoration: none;
