--- a/views/mypage/reviewDetail.ejs
+++ b/views/mypage/reviewDetail.ejs
@@ -24,7 +24,7 @@
 
             <div class="review">
                 <div class="rest">
-                    <a href="/restaurantDetail/<%=reviewDetail.review_index%>">
+                    <a href="/restaurantDetail/<%=reviewDetail.rest_index%>">
                         <img
                             src="/static/images/<%= reviewDetail.rest_index %>.png"
                             alt="식당 이미지"
