--- a/views/mypage/reviewList.ejs
+++ b/views/mypage/reviewList.ejs
@@ -24,7 +24,7 @@
             <% for (let i=0; i<reviewList.length; i++) { %>
             <div class="review">
                 <div class="rest">
-                    <a href="/restaurantDetail/<%=reviewList[i].review_index%>">
+                    <a href="/restaurantDetail/<%=reviewList[i].rest_index%>">
                     <img
                         src="/static/images/<%= reviewList[i].rest_index %>.png"
                         alt="식당 이미지"
