--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -53,7 +53,7 @@
                     try {
                         const keyword = document.getElementById("searchInput").value.trim(); // 입력값의 앞뒤 공백 제거
                         if (!keyword) {
-                            return; // 검색어가 없으면 함수 종료
+                            return;
                         }
                         document.location.href = `/search?keyword=${keyword}`;
                     } catch (error) {
@@ -73,39 +73,28 @@
             <!-- 타이핑 효과 -->
             <script>
                 const $typingTxt = document.querySelector(".typing .typingTxt");
-
-                // 글자 모음 - 개행문자(\n)로 줄바꿈
                 const letters = ["창동역 맛집 모음"];
-
-                // 글자 입력 속도
                 const speed = 100;
                 let i = 0;
 
-                // 줄바꿈을 위한 <br> 치환
                 const changeLineBreak = (letter) => {
                     return letter.map((typingTxt) => (typingTxt === "\n" ? "<br>" : typingTxt));
                 };
 
                 // 타이핑 효과
                 const typing = async () => {
-                    // 기존코드에서 개행치환코드 추가
                     const letter = changeLineBreak(letters[i].split(""));
 
                     while (letter.length) {
                         await wait(speed);
                         $typingTxt.innerHTML += letter.shift();
                     }
-
-                    // 잠시 대기
                     await wait(800);
-
-                    // 지우는 효과
                     remove();
                 };
 
                 // 글자 지우는 효과
                 const remove = async () => {
-                    // 기존코드에서 개행치환코드 추가
                     const letter = changeLineBreak(letters[i].split(""));
 
                     while (letter.length) {
@@ -114,18 +103,13 @@
                         letter.pop();
                         $typingTxt.innerHTML = letter.join("");
                     }
-
-                    // 다음 순서의 글자로 지정, 타이핑 함수 다시 실행
                     i = !letters[i + 1] ? 0 : i + 1;
                     typing();
                 };
 
-                // 딜레이 기능 ( 마이크로초 )
                 function wait(ms) {
                     return new Promise((res) => setTimeout(res, ms));
                 }
-
-                // 초기 실행
                 setTimeout(typing, 1500);
             </script>
 
@@ -260,7 +244,6 @@
                     <span class="box intId">
                         <input type="text" name="id" class="int" maxlength="20" />
                     </span>
-                    <!-- <span class="error_next_box"></span> -->
                 </div>
 
                 <!-- 비밀번호 -->
@@ -341,7 +324,6 @@
                             onkeydown="inputIdCk()"
                             required
                         />
-                        <!-- 타입을 btn에서 input으로 수정 -->
                         <span class="stepbutton">
                             <button id="btnCheckId" onclick="idCheck()">중복확인</button>
                             <input
@@ -410,8 +392,6 @@
                 </div>
 
                 <!-- 이메일 -->
-                <!-- <form id="checkEmail" action="/checkEmail" method="POST"></form> -->
-                <!-- form 안에 form 작성불가 -->
                 <div>
                     <h4>
                         <label for="email">이메일</label>
@@ -507,7 +487,6 @@
     </script>
 
     <!-- 이메일 확인 코드 전송 -->
-
     <script>
         // 간단한 이메일 형식 유효성 검사
         function validateEmail(email) {
@@ -538,7 +517,6 @@
                 },
             })
                 .then((response) => {
-                    // console.log("res 작동 확인", response.data);
                     if (response.data.ok) {
                         emailInput.setAttribute("readonly", true);
                         alert("메일 전송에 성공하였습니다.");
@@ -575,7 +553,6 @@
                 .then((response) => {
                     if (response.data.ok) {
                         alert("인증번호가 일치합니다.");
-                        // 인증번호 일치시 코드값을 변경하여 회원가입 가능하도록 설정
                         document.getElementById("codeDuplication").value = "btnEmailCk";
                         if (callback) {
                             callback(true);
@@ -668,7 +645,6 @@
                 evt.preventDefault();
             } else if (container.classList.contains("active") && !obj.closest(".inputHolder")) {
                 container.classList.remove("active");
-                // clear input
                 container.querySelector(".searchInput").value = "";
             }
         }
